creating controller of task.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=taskControl
+
+# application.properties
+spring.datasource.url=jdbc:mariadb://localhost:3306/taskControl
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# Opcional: Para habilitar o console H2 enquanto usa MariaDB (útil para testes)
+# spring.h2.console.enabled=true
+
+# Opcional: Para ver os SQLs gerados
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
